--- a/Artivity.Explorer/debian/changelog
+++ b/Artivity.Explorer/debian/changelog
@@ -1,3 +1,27 @@
+artivity-explorer (1.5.9-1semiodesk0) trusty; urgency=low
+
+  * Packaging correct binaries for previous version.. ;) 
+
+ -- Sebastian Faubel <sebastian@semiodesk.com>  Wed, 22 Oct 2015 16:36:00 +0200
+
+artivity-explorer (1.5.8-1semiodesk0) trusty; urgency=low
+
+  * Setup now properly initializing the agents model.
+
+ -- Sebastian Faubel <sebastian@semiodesk.com>  Wed, 22 Oct 2015 15:59:00 +0200
+
+artivity-explorer (1.5.7-1semiodesk0) trusty; urgency=low
+
+  * Setup now creating autostart directory, if not exists.
+
+ -- Sebastian Faubel <sebastian@semiodesk.com>  Wed, 22 Oct 2015 12:31:00 +0200
+
+artivity-explorer (1.5.6-1semiodesk0) trusty; urgency=low
+
+  * Changed dependency of Artivity Explorer on gtk3 to gtk2.
+
+ -- Sebastian Faubel <sebastian@semiodesk.com>  Wed, 22 Oct 2015 12:10:00 +0200
+
 artivity-explorer (1.5.5-1semiodesk0) trusty; urgency=low
 
   * Fixed missing legend in activity chart.
