--- a/Artivity.Api.Model/debian/changelog
+++ b/Artivity.Api.Model/debian/changelog
@@ -1,3 +1,9 @@
+artivity-datamodel (1.5.6-1semiodesk0) trusty; urgency=low
+
+  * Added support for description of activity influences.
+
+ -- Sebastian Faubel <sebastian@semiodesk.com>  Fri, 23 Oct 2015 15:32:00 +0200
+
 artivity-datamodel (1.5.5-1semiodesk0) trusty; urgency=low
 
   * Fixed missing ontologies.
