--- a/artivity-extension-krita/debian/changelog
+++ b/artivity-extension-krita/debian/changelog
@@ -1,3 +1,9 @@
+artivity-extension-krita (1.5.9-1semiodesk1) trusty; urgency=low
+
+  * Recompiling package against new version of libartivity.
+
+ -- Sebastian Faubel <sebastian@semiodesk.com>  Fri, 23 Oct 2015 15:29:00 +0200
+
 artivity-extension-krita (1.5.8-1semiodesk1) trusty; urgency=low
 
   * Added missing kritaartivity.desktop file.
