--- a/artivity-datamodel/debian/changelog
+++ b/artivity-datamodel/debian/changelog
@@ -1,3 +1,9 @@
+artivity-datamodel (1.5.7-1semiodesk0) trusty; urgency=low
+
+  * Models are now specific to a user.
+
+ -- Sebastian Faubel <sebastian@semiodesk.com>  Mon, 26 Oct 2015 16:45:00 +0200
+
 artivity-datamodel (1.5.6-1semiodesk0) trusty; urgency=low
 
   * Added support for description of activity influences.
