--- a/artivity-apid/debian/changelog
+++ b/artivity-apid/debian/changelog
@@ -1,3 +1,15 @@
+artivity-apid (1.5.12-1semiodesk0) trusty; urgency=low
+
+  * Removed conflicting duplicate dll from package.
+
+ -- Sebastian Faubel <sebastian@semiodesk.com>  Fri, 13 Nov 2015 09:30:00 +0200
+
+artivity-apid (1.5.11-1semiodesk0) trusty; urgency=low
+
+  * Adapated to new datamodel.
+
+ -- Sebastian Faubel <sebastian@semiodesk.com>  Thu, 12 Nov 2015 17:19:00 +0200
+
 artivity-apid (1.5.10-1semiodesk0) trusty; urgency=low
 
   * Models are now specific to a user.
