--- a/artivity-datamodel/debian/changelog
+++ b/artivity-datamodel/debian/changelog
@@ -1,3 +1,9 @@
+artivity-datamodel (1.5.14-1semiodesk0) trusty; urgency=low
+
+  * Hopefully, fixed old version of Trinity being referenced in package.
+
+ -- Sebastian Faubel <sebastian@semiodesk.com>  Mon, 14 Nov 2015 17:10:00 +0200
+
 artivity-datamodel (1.5.13-1semiodesk0) trusty; urgency=low
 
   * Fixed old version of Trinity being referenced in package.
