Bugfix in libartivity: Correctly escaping paths in requested URLs. Bugfix in .NET components: Referencing custom dlls for Semiodesk.Trinity and OpenLink.Data.Virtuoso for compatibility with Mono on Ubuntu 14.04 Implemented monitor module in APID: libaritivity now informs APID about newly created files.

--- a/artivity-datamodel/debian/changelog
+++ b/artivity-datamodel/debian/changelog
@@ -1,3 +1,9 @@
+artivity-datamodel (1.5.15-1semiodesk0) trusty; urgency=low
+
+  * Added support for database monitoring.
+
+ -- Sebastian Faubel <sebastian@semiodesk.com>  Wed, 18 Nov 2015 13:30:00 +0200
+
 artivity-datamodel (1.5.14-1semiodesk0) trusty; urgency=low
 
   * Hopefully, fixed old version of Trinity being referenced in package.
