--- a/artivity-apid/debian/changelog
+++ b/artivity-apid/debian/changelog
@@ -1,3 +1,9 @@
+artivity-apid (1.5.15-1semiodesk0) trusty; urgency=low
+
+  * Implemented monitoring module for registering files with the file system monitor.
+
+ -- Sebastian Faubel <sebastian@semiodesk.com>  Thu, 19 Nov 2015 16:17:00 +0200
+
 artivity-apid (1.5.14-1semiodesk0) trusty; urgency=low
 
   * Added support for database monitoring.
