--- a/artivity-explorer/debian/changelog
+++ b/artivity-explorer/debian/changelog
@@ -1,3 +1,15 @@
+artivity-explorer (1.5.24-1semiodesk0) trusty; urgency=low
+
+  * Bugfix: Correctly escaping URIs in quries.
+
+ -- Sebastian Faubel <sebastian@semiodesk.com>  Fri, 20 Nov 2015 16:15:00 +0200
+
+artivity-explorer (1.5.23-1semiodesk0) trusty; urgency=low
+
+  * Bugfix: Journal now displays all recently used files.
+
+ -- Sebastian Faubel <sebastian@semiodesk.com>  Fri, 20 Nov 2015 15:15:00 +0200
+
 artivity-explorer (1.5.22-1semiodesk0) trusty; urgency=low
 
   * Bugfix: Explorer now handles files with whitespaces in the file name.
