--- a/artivity-explorer/debian/changelog
+++ b/artivity-explorer/debian/changelog
@@ -1,3 +1,10 @@
+artivity-explorer (1.5.25-1semiodesk0) trusty; urgency=low
+
+  * Improved export dialog.
+  * Minor bugfixes.
+
+ -- Sebastian Faubel <sebastian@semiodesk.com>  Wed, 25 Nov 2015 15:15:00 +0200
+
 artivity-explorer (1.5.24-1semiodesk0) trusty; urgency=low
 
   * Bugfix: Correctly escaping URIs in quries.
